2007-03-18  Stefan Jahn  <stefan@lkcc.org>

	* qucs_fr.ts: Updated french translations.  Thanks to Vincent!

2007-03-17  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (%.qm): Also renamed cz -> cs.  Thanks Marek
	for pointing this out!

	* dialogs/qucssettingsdialog.cpp (QucsSettingsDialog): Renamed
	cz -> cs for the Czech translations.

2007-03-13  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug of disappearing elements at moving and multiple clicks
	* fixed crash when double-clicking diagrams with markers

2007-03-13  Stefan Jahn  <stefan@lkcc.org>

	* qucs_ru.ts: Updated Russian translations.

	* qucs_it.ts: Updated Italian translations.

2007-03-12  Stefan Jahn  <stefan@lkcc.org>

	* qucs_init.cpp (initActions): Made icon texts and some status
	bar tips translatable.  Thanks Igor for pointing this out.

2007-03-11  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug in selecting ellipse arc

2007-03-08  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug loading old schematics with diodes
	* fixed bug loading FBH HBT

2007-03-03  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* set marker painting precisely
	* fixed bug in painting diagram selection frame
	* added diode property: Ikf

2007-02-24  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* marker pointer with precize graph position at zoom >1
	* fixed bug setting marker on 2D graph in 3D diagram
	* fixed bug with nan values in diagrams
	* enter wire mode when clicking on circuit node

2007-01-12  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* correct position for graph style "circles"
	* somewhat fixed shorten for digital components
	* some restructuring
	* own bitmaps for HICUM and FBH HBT
	* default graph style "arrows" for HB variables

2007-01-22  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* better resizing at zoom levels <> 1
	* better selecting at zoom levels <> 1