@@ -15,10 +15,17 @@
  *                                                                         *
  ***************************************************************************/
 
-#include "polardiagram.h"
-#include "main.h"
+#if HAVE_CONFIG_H
+# include <config.h>
+#endif
 
 #include <math.h>
+#if HAVE_IEEEFP_H
+# include <ieeefp.h>
+#endif
+
+#include "polardiagram.h"
+#include "main.h"
 
 
 PolarDiagram::PolarDiagram(int _cx, int _cy) : Diagram(_cx, _cy)
